--- a/Admission.html
+++ b/Admission.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/course.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:13 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -57,8 +58,10 @@
             <div class="kidba-menu-sidebar-top mb-40">
                 <nav>
                     <div class="nav nav-tabs border-0" id="nav-tab" role="tablist">
-                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu" type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
-                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button" role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
+                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu"
+                            type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
+                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button"
+                            role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
                     </div>
                 </nav>
             </div>
@@ -76,7 +79,8 @@
                         <div class="kidba-sidebar-info-content-331">
                             <ul>
                                 <li><i class="icofont-clock-time"></i> 9:30am - 6:30pm, Mon - Sun</li>
-                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567 6587</a></li>
+                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567
+                                        6587</a></li>
                                 <li><i class="icofont-google-map"></i> Anmoore Road Brooklyn, NY 230</li>
                             </ul>
                         </div>
@@ -149,8 +153,8 @@
                                 </li>
 
                                 <li class="tl-nav-item tl-dropdown">
-                                    <a href="class.html" role="button">
-                                        CLASSES <i class="fa-regular fa-angle-down"></i>
+                                    <a href="Admission.html" role="button">
+                                        ADMISSION <i class="fa-regular fa-angle-down"></i>
                                     </a>
                                     <!-- <ul class="tl-submenu">
                                         <li><a href="course.html">Course One</a></li>
@@ -161,7 +165,11 @@
                                         <li><a href="course-details.html">Course Details</a></li>
                                     </ul> -->
                                 </li>
+                                <li class="tl-nav-item tl-dropdown">
+                                    <a href="Eschool.html" role="button">
+                                        E-SCHOOL<i class="fa-regular fa-angle-down"></i>
 
+                                </li>
                                 <li class="tl-nav-item tl-dropdown">
                                     <a href="about-2.html" role="button">
                                         ABOUT US <i class="fa-regular fa-angle-down"></i>
@@ -170,7 +178,7 @@
                                         <li class="tl-dropdown-2">
                                             <a href="#">About <i class="fa-regular fa-angle-right"></i></a> -->
 
-                                            <!-- <ul class="tl-submenu tl-submenu-2">
+                                    <!-- <ul class="tl-submenu tl-submenu-2">
                                                 <li><a href="about.html">About One</a></li>
                                                 <li><a href="about-2.html">About Two</a></li>
                                                 <li><a href="about-3.html">About Three</a></li>
@@ -180,7 +188,7 @@
                                                 <li><a href="about-7.html">About Seven</a></li>
                                                 <li><a href="about-8.html">About Eight</a></li>
                                             </ul> -->
-                                        <!-- </li>
+                                    <!-- </li>
                                         <li class="tl-dropdown-2">
                                             <a href="#">Staff <i class="fa-regular fa-angle-right"></i></a>
 
@@ -193,16 +201,16 @@
                                                 <li><a href="staff-6.html">Staff Six</a></li>
                                             </ul>
                                         </li> -->
-                                        <!-- <li><a href="staff-profile.html">Staff Profile</a></li>
+                                    <!-- <li><a href="staff-profile.html">Staff Profile</a></li>
                                         <li class="tl-dropdown-2">
                                             <a href="News.html">NEWS <i class="fa-regular fa-angle-right"></i></a> -->
 
-                                            <!-- <ul class="tl-submenu tl-submenu-2">
+                                    <!-- <ul class="tl-submenu tl-submenu-2">
                                                 <li><a href="event.html">Event One</a></li>
                                                 <li><a href="event-2.html">Event Two</a></li>
                                                 <li><a href="event-3.html">Event Three</a></li>
                                             </ul> -->
-                                        <!-- </li>
+                                    <!-- </li>
                                         <li><a href="event-details.html">Event Details</a></li>
                                     </ul> -->
                                 </li>
@@ -230,7 +238,7 @@
                                 </li>
 
                                 <li class="tl-nav-item tl-dropdown">
-                                    <a href="contact.html">CONTACT <i class="fa-regular fa-angle-down"></i></a>
+                                    <a href="contact.html">CONTACT US <i class="fa-regular fa-angle-down"></i></a>
 
                                     <!-- <ul class="tl-submenu">
                                         <li><a href="contact.html">Contact One</a></li>
@@ -241,12 +249,12 @@
                         </div>
                     </div>
 
-                    <div class="col-3 d-lg-block d-none">
+                    <!-- <div class="col-3 d-lg-block d-none">
                         <div class="tl-header-actions kb-16-header-actions d-flex justify-content-end align-items-center">
                             <a href="signin.html"><i class="fa-regular fa-user"></i> Sign Up</a>
                             <a href="signup.html" class="tl-def-btn tl-1-header-btn">Free Trial</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -292,7 +300,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -317,7 +326,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -342,7 +352,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -367,7 +378,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -392,7 +404,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -417,7 +430,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -442,7 +456,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -467,7 +482,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -492,7 +508,8 @@
 
                         <div class="tl-1-course-txt">
                             <span class="tl-1-course-author">By <a href="#">Brian Cumin</a></span>
-                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based Approaches</a></h4>
+                            <h4 class="tl-1-course-title"><a href="#">Teaching Math and Science Inquiry-Based
+                                    Approaches</a></h4>
                             <div class="tl-1-course-stats">
                                 <div class="tl-1-course-stat">
                                     <span class="tl-1-course-stat-icon"><i class="fa-regular fa-book-blank"></i></span>
@@ -546,7 +563,8 @@
                             <a href="index.html" class="logo tl-footer-widget-title">
                                 <img src="assets/images/logos/logo-2-light.png" alt="logo">
                             </a>
-                            <p class="tl-1-footer-descr">Nullam nulla eget dui efficitur tempor sit amet quis magna, Suspendisse.</p>
+                            <p class="tl-1-footer-descr">Nullam nulla eget dui efficitur tempor sit amet quis magna,
+                                Suspendisse.</p>
                             <div class="tl-1-footer-socials">
                                 <ul>
                                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -590,7 +608,8 @@
                         <div class="tl-footer-widget tl-3-footer-widget">
                             <h5 class="tl-footer-widget-title">Subscribe</h5>
                             <form action="#" class="tl-1-nwsltr-form">
-                                <input type="email" name="nwsltr-mail" id="tl-1-nwsltr-mail" class="tl-1-nwsltr-mail-input" placeholder="Get news & updates">
+                                <input type="email" name="nwsltr-mail" id="tl-1-nwsltr-mail"
+                                    class="tl-1-nwsltr-mail-input" placeholder="Get news & updates">
                                 <button class="tl-1-nwsltr-btn" id="tl-1-nwsltr-btn">@</button>
                             </form>
                             <p class="tl-1-nwsltr-txt">Register now to get latest updates on promotions & coupons.</p>
@@ -633,4 +652,5 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/course.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:13 GMT -->
+
 </html>
