--- a/Eschool.html
+++ b/Eschool.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:14 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,8 +56,10 @@
             <div class="kidba-menu-sidebar-top mb-40">
                 <nav>
                     <div class="nav nav-tabs border-0" id="nav-tab" role="tablist">
-                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu" type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
-                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button" role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
+                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu"
+                            type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
+                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button"
+                            role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
                     </div>
                 </nav>
             </div>
@@ -74,7 +77,8 @@
                         <div class="kidba-sidebar-info-content-331">
                             <ul>
                                 <li><i class="icofont-clock-time"></i> 9:30am - 6:30pm, Mon - Sun</li>
-                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567 6587</a></li>
+                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567
+                                        6587</a></li>
                                 <li><i class="icofont-google-map"></i> Anmoore Road Brooklyn, NY 230</li>
                             </ul>
                         </div>
@@ -126,125 +130,51 @@
                             <ul class="justify-content-center">
                                 <li class="tl-nav-item tl-dropdown">
                                     <a href="#" role="button">
-                                        Home <i class="fa-regular fa-angle-down"></i>
+                                        HOME <i class="fa-regular fa-angle-down"></i>
                                     </a>
-                                    <ul class="tl-submenu">
-                                        <li><a href="index.html">Online Education (LMS)</a></li>
-                                        <li><a href="index-2.html">Kindergarten</a></li>
-                                        <li><a href="index-3.html">School</a></li>
-                                        <li><a href="index-4.html">College</a></li>
-                                        <li><a href="index-5.html">University</a></li>
-                                        <li><a href="index-6.html">Magazine</a></li>
-                                        <li><a href="index-7.html">Dance School</a></li>
-                                        <li><a href="index-8.html">Driving School</a></li>
-                                        <li><a href="index-9.html">Music School</a></li>
-                                        <li><a href="index-10.html">University Two</a></li>
-                                        <li><a href="index-11.html">Magazine Two</a></li>
-                                        <li><a href="index-12.html">Live Class</a></li>
-                                        <li><a href="index-13.html">Online Course</a></li>
-                                        <li><a href="index-14.html">Language Club</a></li>
-                                    </ul>
+
                                 </li>
 
                                 <li class="tl-nav-item tl-dropdown">
-                                    <a href="#" role="button">
-                                        Courses <i class="fa-regular fa-angle-down"></i>
+                                    <a href="Admission.html" role="button">
+                                        ADMISSION <i class="fa-regular fa-angle-down"></i>
                                     </a>
-                                    <ul class="tl-submenu">
-                                        <li><a href="course.html">Course One</a></li>
-                                        <li><a href="course-2.html">Course Two</a></li>
-                                        <li><a href="course-3.html">Course Three</a></li>
-                                        <li><a href="course-4.html">Course Four</a></li>
 
-                                        <li><a href="course-details.html">Course Details</a></li>
-                                    </ul>
                                 </li>
 
                                 <li class="tl-nav-item tl-dropdown">
-                                    <a href="#" role="button">
-                                        Pages <i class="fa-regular fa-angle-down"></i>
-                                    </a>
-                                    <ul class="tl-submenu">
-                                        <li class="tl-dropdown-2">
-                                            <a href="#">About <i class="fa-regular fa-angle-right"></i></a>
+                                    <a href="News.html" role="button">
+                                        NEWS<i class="fa-regular fa-angle-down"></i>
 
-                                            <ul class="tl-submenu tl-submenu-2">
-                                                <li><a href="about.html">About One</a></li>
-                                                <li><a href="about-2.html">About Two</a></li>
-                                                <li><a href="about-3.html">About Three</a></li>
-                                                <li><a href="about-4.html">About Four</a></li>
-                                                <li><a href="about-5.html">About Five</a></li>
-                                                <li><a href="about-6.html">About Six</a></li>
-                                                <li><a href="about-7.html">About Seven</a></li>
-                                                <li><a href="about-8.html">About Eight</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="tl-dropdown-2">
-                                            <a href="#">Staff <i class="fa-regular fa-angle-right"></i></a>
-
-                                            <ul class="tl-submenu tl-submenu-2">
-                                                <li><a href="staff.html">Staff One</a></li>
-                                                <li><a href="staff-2.html">Staff Two</a></li>
-                                                <li><a href="staff-3.html">Staff Three</a></li>
-                                                <li><a href="staff-4.html">Staff Four</a></li>
-                                                <li><a href="staff-5.html">Staff Five</a></li>
-                                                <li><a href="staff-6.html">Staff Six</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="staff-profile.html">Staff Profile</a></li>
-                                        <li class="tl-dropdown-2">
-                                            <a href="#">Event <i class="fa-regular fa-angle-right"></i></a>
-
-                                            <ul class="tl-submenu tl-submenu-2">
-                                                <li><a href="event.html">Event One</a></li>
-                                                <li><a href="event-2.html">Event Two</a></li>
-                                                <li><a href="event-3.html">Event Three</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="event-details.html">Event Details</a></li>
-                                    </ul>
                                 </li>
 
                                 <li class="tl-nav-item tl-dropdown">
-                                    <a href="#" role="button">
-                                        Blog <i class="fa-regular fa-angle-down"></i>
-                                    </a>
-                                    <ul class="tl-submenu">
-                                        <li class="tl-dropdown-2">
-                                            <a href="#">Blog <i class="fa-regular fa-angle-right"></i></a>
+                                    <a href="Eschool.html">E-SCHOOL <i class="fa-regular fa-angle-down"></i></a>
 
-                                            <ul class="tl-submenu tl-submenu-2">
-                                                <li><a href="blog.html">Blog One</a></li>
-                                                <li><a href="blog-2.html">Blog Two</a></li>
-                                                <li><a href="blog-3.html">Blog Three</a></li>
-                                                <li><a href="blog-4.html">Blog Four</a></li>
-                                                <li><a href="blog-5.html">Blog Five</a></li>
-                                                <li><a href="blog-6.html">Blog Six</a></li>
-                                                <li><a href="blog-7.html">Blog Seven</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>
 
                                 <li class="tl-nav-item tl-dropdown">
-                                    <a href="#">Contact <i class="fa-regular fa-angle-down"></i></a>
+                                    <a href="about-2.html" role="button">
+                                        ABOUT US <i class="fa-regular fa-angle-down"></i>
 
-                                    <ul class="tl-submenu">
-                                        <li><a href="contact.html">Contact One</a></li>
-                                        <li><a href="contact-2.html">Contact Two</a></li>
-                                    </ul>
                                 </li>
+                                <li class="tl-nav-item tl-dropdown">
+                                    <a href="contact.html" role="button">
+                                        CONTACT US <i class="fa-regular fa-angle-down"></i>
+
+                                </li>
+
+
                             </ul>
                         </div>
                     </div>
 
-                    <div class="col-3 d-lg-block d-none">
-                        <div class="tl-header-actions kb-16-header-actions d-flex justify-content-end align-items-center">
+                    <!-- <div class="col-3 d-lg-block d-none">
+                        <div
+                            class="tl-header-actions kb-16-header-actions d-flex justify-content-end align-items-center">
                             <a href="signin.html"><i class="fa-regular fa-user"></i> Sign Up</a>
                             <a href="signup.html" class="tl-def-btn tl-1-header-btn">Free Trial</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -287,12 +217,14 @@
 
                         <div class="tl-1-blog-txt">
                             <div class="tl-1-blog-info">
-                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24, 2023</h6>
+                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24,
+                                    2023</h6>
                             </div>
                             <h4 class="tl-1-blog-title">
                                 <a href="#">LMS for Corporate Training Optimizing Employee Learning and Development.</a>
                             </h4>
-                            <a href="#" class="tl-1-blog-btn">Continue Reading <i class="fa-regular fa-arrow-right"></i></a>
+                            <a href="#" class="tl-1-blog-btn">Continue Reading <i
+                                    class="fa-regular fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -303,12 +235,14 @@
 
                         <div class="tl-1-blog-txt">
                             <div class="tl-1-blog-info">
-                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24, 2023</h6>
+                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24,
+                                    2023</h6>
                             </div>
                             <h4 class="tl-1-blog-title">
                                 <a href="#">LMS for Corporate Training Optimizing Employee Learning and Development.</a>
                             </h4>
-                            <a href="#" class="tl-1-blog-btn">Continue Reading <i class="fa-regular fa-arrow-right"></i></a>
+                            <a href="#" class="tl-1-blog-btn">Continue Reading <i
+                                    class="fa-regular fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -319,12 +253,14 @@
 
                         <div class="tl-1-blog-txt">
                             <div class="tl-1-blog-info">
-                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24, 2023</h6>
+                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24,
+                                    2023</h6>
                             </div>
                             <h4 class="tl-1-blog-title">
                                 <a href="#">LMS for Corporate Training Optimizing Employee Learning and Development.</a>
                             </h4>
-                            <a href="#" class="tl-1-blog-btn">Continue Reading <i class="fa-regular fa-arrow-right"></i></a>
+                            <a href="#" class="tl-1-blog-btn">Continue Reading <i
+                                    class="fa-regular fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -335,12 +271,14 @@
 
                         <div class="tl-1-blog-txt">
                             <div class="tl-1-blog-info">
-                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24, 2023</h6>
+                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24,
+                                    2023</h6>
                             </div>
                             <h4 class="tl-1-blog-title">
                                 <a href="#">LMS for Corporate Training Optimizing Employee Learning and Development.</a>
                             </h4>
-                            <a href="#" class="tl-1-blog-btn">Continue Reading <i class="fa-regular fa-arrow-right"></i></a>
+                            <a href="#" class="tl-1-blog-btn">Continue Reading <i
+                                    class="fa-regular fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -351,12 +289,14 @@
 
                         <div class="tl-1-blog-txt">
                             <div class="tl-1-blog-info">
-                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24, 2023</h6>
+                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24,
+                                    2023</h6>
                             </div>
                             <h4 class="tl-1-blog-title">
                                 <a href="#">LMS for Corporate Training Optimizing Employee Learning and Development.</a>
                             </h4>
-                            <a href="#" class="tl-1-blog-btn">Continue Reading <i class="fa-regular fa-arrow-right"></i></a>
+                            <a href="#" class="tl-1-blog-btn">Continue Reading <i
+                                    class="fa-regular fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -367,12 +307,14 @@
 
                         <div class="tl-1-blog-txt">
                             <div class="tl-1-blog-info">
-                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24, 2023</h6>
+                                <h6 class="tl-3-single-event-time"><i class="fa-light fa-calendar-lines"></i> March 24,
+                                    2023</h6>
                             </div>
                             <h4 class="tl-1-blog-title">
                                 <a href="#">LMS for Corporate Training Optimizing Employee Learning and Development.</a>
                             </h4>
-                            <a href="#" class="tl-1-blog-btn">Continue Reading <i class="fa-regular fa-arrow-right"></i></a>
+                            <a href="#" class="tl-1-blog-btn">Continue Reading <i
+                                    class="fa-regular fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
@@ -415,7 +357,8 @@
                             <a href="index.html" class="logo tl-footer-widget-title">
                                 <img src="assets/images/logos/logo.png" alt="Logo">
                             </a>
-                            <p class="tl-1-footer-descr">Nullam nulla eget dui efficitur tempor sit amet quis magna, Suspendisse.</p>
+                            <p class="tl-1-footer-descr">Nullam nulla eget dui efficitur tempor sit amet quis magna,
+                                Suspendisse.</p>
                             <div class="tl-1-footer-socials">
                                 <ul>
                                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -459,7 +402,8 @@
                         <div class="tl-footer-widget tl-3-footer-widget">
                             <h5 class="tl-footer-widget-title">Subscribe</h5>
                             <form action="#" class="tl-1-nwsltr-form">
-                                <input type="email" name="nwsltr-mail" id="tl-1-nwsltr-mail" class="tl-1-nwsltr-mail-input" placeholder="Get news & updates">
+                                <input type="email" name="nwsltr-mail" id="tl-1-nwsltr-mail"
+                                    class="tl-1-nwsltr-mail-input" placeholder="Get news & updates">
                                 <button class="tl-1-nwsltr-btn" id="tl-1-nwsltr-btn">@</button>
                             </form>
                             <p class="tl-1-nwsltr-txt">Register now to get latest updates on promotions & coupons.</p>
@@ -503,4 +447,5 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:14 GMT -->
+
 </html>
