--- a/News.html
+++ b/News.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/event.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:14 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,8 +56,10 @@
             <div class="kidba-menu-sidebar-top mb-40">
                 <nav>
                     <div class="nav nav-tabs border-0" id="nav-tab" role="tablist">
-                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu" type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
-                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button" role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
+                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu"
+                            type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
+                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button"
+                            role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
                     </div>
                 </nav>
             </div>
@@ -74,7 +77,8 @@
                         <div class="kidba-sidebar-info-content-331">
                             <ul>
                                 <li><i class="icofont-clock-time"></i> 9:30am - 6:30pm, Mon - Sun</li>
-                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567 6587</a></li>
+                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567
+                                        6587</a></li>
                                 <li><i class="icofont-google-map"></i> Anmoore Road Brooklyn, NY 230</li>
                             </ul>
                         </div>
@@ -117,129 +121,56 @@
                     <div class="tl-nav-menu kb-nav-menu-9">
                         <ul>
                             <li class="tl-nav-item tl-3-nav-item tl-dropdown">
-                                <a href="index.html" role="button">
+                                <a href="#" role="button">
                                     HOME <i class="fa-regular fa-angle-down"></i>
                                 </a>
-                                <!-- <ul class="tl-submenu">
-                                    <li><a href="index.html">Online Education (LMS)</a></li>
-                                    <li><a href="index-2.html">Kindergarten</a></li>
-                                    <li><a href="index-3.html">School</a></li>
-                                    <li><a href="index-4.html">College</a></li>
-                                    <li><a href="index-5.html">University</a></li>
-                                    <li><a href="index-6.html">Magazine</a></li>
-                                    <li><a href="index-7.html">Dance School</a></li>
-                                    <li><a href="index-8.html">Driving School</a></li>
-                                    <li><a href="index-9.html">Music School</a></li>
-                                    <li><a href="index-10.html">University Two</a></li>
-                                    <li><a href="index-11.html">Magazine Two</a></li>
-                                    <li><a href="index-12.html">Live Class</a></li>
-                                    <li><a href="index-13.html">Online Course</a></li>
-                                    <li><a href="index-14.html">Language Club</a></li>
-                                </ul> -->
+
                             </li>
 
-                            <li class="tl-nav-item tl-3-nav-item tl-dropdown">
-                                <a href="class.html" role="button">
-                                    CLASSES <i class="fa-regular fa-angle-down"></i>
+                            <li class="tl-nav-item tl-dropdown">
+                                <a href="Admission.html" role="button">
+                                    ADMISSION <i class="fa-regular fa-angle-down"></i>
                                 </a>
-                                <!-- <ul class="tl-submenu">
-                                    <li><a href="course.html">Course One</a></li>
-                                    <li><a href="course-2.html">Course Two</a></li>
-                                    <li><a href="course-3.html">Course Three</a></li>
-                                    <li><a href="course-4.html">Course Four</a></li>
 
-                                    <li><a href="course-details.html">Course Details</a></li>
-                                </ul> -->
                             </li>
 
-                            <li class="tl-nav-item tl-3-nav-item tl-dropdown">
+                            <li class="tl-nav-item tl-dropdown">
+                                <a href="News.html" role="button">
+                                    NEWS<i class="fa-regular fa-angle-down"></i>
+
+                            </li>
+
+                            <li class="tl-nav-item tl-dropdown">
+                                <a href="Eschool.html">E-SCHOOL <i class="fa-regular fa-angle-down"></i></a>
+
+
+                            <li class="tl-nav-item tl-dropdown">
                                 <a href="about-2.html" role="button">
                                     ABOUT US <i class="fa-regular fa-angle-down"></i>
-                                </a>
-                                <!-- <ul class="tl-submenu">
-                                    <li class="tl-dropdown-2">
-                                        <a href="#">About <i class="fa-regular fa-angle-right"></i></a>
 
-                                        <ul class="tl-submenu tl-submenu-2">
-                                            <li><a href="about.html">About One</a></li>
-                                            <li><a href="about-2.html">About Two</a></li>
-                                            <li><a href="about-3.html">About Three</a></li>
-                                            <li><a href="about-4.html">About Four</a></li>
-                                            <li><a href="about-5.html">About Five</a></li>
-                                            <li><a href="about-6.html">About Six</a></li>
-                                            <li><a href="about-7.html">About Seven</a></li>
-                                            <li><a href="about-8.html">About Eight</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="tl-dropdown-2">
-                                        <a href="#">Staff <i class="fa-regular fa-angle-right"></i></a>
+                            </li>
+                            <li class="tl-nav-item tl-dropdown">
+                                <a href="contact.html" role="button">
+                                    CONTACT US <i class="fa-regular fa-angle-down"></i>
 
-                                        <ul class="tl-submenu tl-submenu-2">
-                                            <li><a href="staff.html">Staff One</a></li>
-                                            <li><a href="staff-2.html">Staff Two</a></li>
-                                            <li><a href="staff-3.html">Staff Three</a></li>
-                                            <li><a href="staff-4.html">Staff Four</a></li>
-                                            <li><a href="staff-5.html">Staff Five</a></li>
-                                            <li><a href="staff-6.html">Staff Six</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="staff-profile.html">Staff Profile</a></li>
-                                    <li class="tl-dropdown-2">
-                                        <a href="#">Event <i class="fa-regular fa-angle-right"></i></a>
-
-                                        <ul class="tl-submenu tl-submenu-2">
-                                            <li><a href="event.html">Event One</a></li>
-                                            <li><a href="event-2.html">Event Two</a></li>
-                                            <li><a href="event-3.html">Event Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="event-details.html">Event Details</a></li>
-                                </ul> -->
                             </li>
 
-                            <li class="tl-nav-item tl-3-nav-item tl-dropdown">
-                                <a href="News.html" role="button">
-                                    NEWS <i class="fa-regular fa-angle-down"></i>
-                                </a>
-                                <!-- <ul class="tl-submenu">
-                                    <li class="tl-dropdown-2">
-                                        <a href="#">Blog <i class="fa-regular fa-angle-right"></i></a>
 
-                                        <ul class="tl-submenu tl-submenu-2">
-                                            <li><a href="blog.html">Blog One</a></li>
-                                            <li><a href="blog-2.html">Blog Two</a></li>
-                                            <li><a href="blog-3.html">Blog Three</a></li>
-                                            <li><a href="blog-4.html">Blog Four</a></li>
-                                            <li><a href="blog-5.html">Blog Five</a></li>
-                                            <li><a href="blog-6.html">Blog Six</a></li>
-                                            <li><a href="blog-7.html">Blog Seven</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                </ul> -->
-                            </li>
-
-                            <li class="tl-nav-item tl-3-nav-item tl-dropdown">
-                                <a href="contact.html">CONTACT <i class="fa-regular fa-angle-down"></i></a>
-
-                                <!-- <ul class="tl-submenu">
-                                    <li><a href="contact.html">Contact One</a></li>
-                                    <li><a href="contact-2.html">Contact Two</a></li>
-                                </ul> -->
-                            </li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-4 d-lg-block d-none">
+                <!-- <div class="col-4 d-lg-block d-none">
                     <div class="tl-header-actions d-flex justify-content-end">
                         <form action="#" class="tl-nav-search-form tl-3-nav-search-form">
-                            <input type="search" name="Search" class="tl-nav-search tl-3-nav-search" placeholder="Search items">
-                            <button class="tl-searh-btn kb-searh-btn-9"><i class="fa-light fa-magnifying-glass"></i></button>
+                            <input type="search" name="Search" class="tl-nav-search tl-3-nav-search"
+                                placeholder="Search items">
+                            <button class="tl-searh-btn kb-searh-btn-9"><i
+                                    class="fa-light fa-magnifying-glass"></i></button>
                         </form>
                         <a href="signup.html" class="tl-3-def-btn"><i class="fa-regular fa-user"></i> Login</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -293,7 +224,8 @@
                                     </h6>
                                 </div>
 
-                                <h3 class="tl-3-single-event-title"><a href="#">Connecting Education and Real-World Challenges.</a></h3>
+                                <h3 class="tl-3-single-event-title"><a href="#">Connecting Education and Real-World
+                                        Challenges.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -315,7 +247,8 @@
                                     </h6>
                                 </div>
 
-                                <h3 class="tl-3-single-event-title"><a href="#">Learning Digital Adapting Education for the 21st Century.</a></h3>
+                                <h3 class="tl-3-single-event-title"><a href="#">Learning Digital Adapting Education for
+                                        the 21st Century.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -337,7 +270,8 @@
                                     </h6>
                                 </div>
 
-                                <h3 class="tl-3-single-event-title"><a href="#">Education Fostering Inclusivity and Understanding.</a></h3>
+                                <h3 class="tl-3-single-event-title"><a href="#">Education Fostering Inclusivity and
+                                        Understanding.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -359,7 +293,8 @@
                                     </h6>
                                 </div>
 
-                                <h3 class="tl-3-single-event-title"><a href="#">Empowering Minds: Unleashing the Potential of Education.</a></h3>
+                                <h3 class="tl-3-single-event-title"><a href="#">Empowering Minds: Unleashing the
+                                        Potential of Education.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -381,7 +316,8 @@
                                     </h6>
                                 </div>
 
-                                <h3 class="tl-3-single-event-title"><a href="#">Connecting Education and Real-World Challenges.</a></h3>
+                                <h3 class="tl-3-single-event-title"><a href="#">Connecting Education and Real-World
+                                        Challenges.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -403,7 +339,8 @@
                                     </h6>
                                 </div>
 
-                                <h3 class="tl-3-single-event-title"><a href="#">Learning Digital Adapting Education for the 21st Century.</a></h3>
+                                <h3 class="tl-3-single-event-title"><a href="#">Learning Digital Adapting Education for
+                                        the 21st Century.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -425,7 +362,8 @@
                                     </h6>
                                 </div>
 
-                                <h3 class="tl-3-single-event-title"><a href="#">Education Fostering Inclusivity and Understanding.</a></h3>
+                                <h3 class="tl-3-single-event-title"><a href="#">Education Fostering Inclusivity and
+                                        Understanding.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -447,7 +385,8 @@
                                     </h6>
                                 </div>
 
-                                <h3 class="tl-3-single-event-title"><a href="#">Empowering Minds: Unleashing the Potential of Education.</a></h3>
+                                <h3 class="tl-3-single-event-title"><a href="#">Empowering Minds: Unleashing the
+                                        Potential of Education.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -493,7 +432,8 @@
                             </a>
 
                             <ul class="tl-footer-links tl-3-footer-links tl-3-footer-contact-infos">
-                                <li><a href="tel:2348163634644" class="tl-footer-number">+2348163634644,+2348078379149/a></li>
+                                <li><a href="tel:2348163634644"
+                                        class="tl-footer-number">+2348163634644,+2348078379149/a></li>
 
                                 <li>
                                     <p class="tl-3-footer-address">16,Oyekunle Street,
@@ -537,7 +477,8 @@
                             <h5 class="tl-footer-widget-title tl-3-footer-widget-title">Newsletter</h5>
                             <p class="tl-3-nwsltr-txt">Register now to get latest updates on promotions & coupons.</p>
                             <form action="#" class="tl-3-nwsltr-form">
-                                <input type="email" name="nwsltr-mail" id="tl-3-nwsltr-mail" class="tl-3-nwsltr-mail-input" placeholder="Enter Your Email">
+                                <input type="email" name="nwsltr-mail" id="tl-3-nwsltr-mail"
+                                    class="tl-3-nwsltr-mail-input" placeholder="Enter Your Email">
                                 <button class="tl-3-def-btn" id="tl-3-nwsltr-btn">Get Newsletter</button>
                             </form>
                         </div>
@@ -550,7 +491,8 @@
             <div class="container">
                 <div class="row gy-4 align-items-center">
                     <div class="col-md-6">
-                        <p class="tl-3-copyright-txt m-0 text-center text-md-start">Copyright &copy; 2024 All Rights Reserved by First Quiver</p>
+                        <p class="tl-3-copyright-txt m-0 text-center text-md-start">Copyright &copy; 2024 All Rights
+                            Reserved by First Quiver</p>
                     </div>
 
                     <div class="col-md-6">
@@ -583,4 +525,5 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/event.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:14 GMT -->
+
 </html>
