--- a/about-2.html
+++ b/about-2.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/about-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:13 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,8 +56,10 @@
             <div class="kidba-menu-sidebar-top mb-40">
                 <nav>
                     <div class="nav nav-tabs border-0" id="nav-tab" role="tablist">
-                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu" type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
-                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button" role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
+                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu"
+                            type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
+                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button"
+                            role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
                     </div>
                 </nav>
             </div>
@@ -74,7 +77,8 @@
                         <div class="kidba-sidebar-info-content-331">
                             <ul>
                                 <li><i class="icofont-clock-time"></i> 9:30am - 6:30pm, Mon - Sun</li>
-                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567 6587</a></li>
+                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567
+                                        6587</a></li>
                                 <li><i class="icofont-google-map"></i> Anmoore Road Brooklyn, NY 230</li>
                             </ul>
                         </div>
@@ -117,131 +121,59 @@
                     <div class="tl-nav-menu">
                         <ul class="justify-content-center">
                             <li class="tl-nav-item tl-dropdown">
-                                <a href="index.html" role="button">
+                                <a href="#" role="button">
                                     HOME <i class="fa-regular fa-angle-down"></i>
                                 </a>
-                                <!-- <ul class="tl-submenu">
-                                    <li><a href="index.html">Online Education (LMS)</a></li>
-                                    <li><a href="index-2.html">Kindergarten</a></li>
-                                    <li><a href="index-3.html">School</a></li>
-                                    <li><a href="index-4.html">College</a></li>
-                                    <li><a href="index-5.html">University</a></li>
-                                    <li><a href="index-6.html">Magazine</a></li>
-                                    <li><a href="index-7.html">Dance School</a></li>
-                                    <li><a href="index-8.html">Driving School</a></li>
-                                    <li><a href="index-9.html">Music School</a></li>
-                                    <li><a href="index-10.html">University Two</a></li>
-                                    <li><a href="index-11.html">Magazine Two</a></li>
-                                    <li><a href="index-12.html">Live Class</a></li>
-                                    <li><a href="index-13.html">Online Course</a></li>
-                                    <li><a href="index-14.html">Language Club</a></li>
-                                </ul> -->
+
                             </li>
 
                             <li class="tl-nav-item tl-dropdown">
-                                <a href="class.html" role="button">
-                                    CLASSES <i class="fa-regular fa-angle-down"></i>
+                                <a href="Admission.html" role="button">
+                                    ADMISSION <i class="fa-regular fa-angle-down"></i>
                                 </a>
-                                <!-- <ul class="tl-submenu">
-                                    <li><a href="course.html">Course One</a></li>
-                                    <li><a href="course-2.html">Course Two</a></li>
-                                    <li><a href="course-3.html">Course Three</a></li>
-                                    <li><a href="course-4.html">Course Four</a></li>
 
-                                    <li><a href="course-details.html">Course Details</a></li>
-                                </ul> -->
-                            </li>
-
-                            <li class="tl-nav-item tl-dropdown">
-                                <a href="about-2.html" role="button">
-                                    ABOUT US <i class="fa-regular fa-angle-down"></i>
-                                </a>
-                                <!-- <ul class="tl-submenu"> -->
-                                    <!-- <li class="tl-dropdown-2">
-                                        <a href="#">About <i class="fa-regular fa-angle-right"></i></a>
-
-                                        <ul class="tl-submenu tl-submenu-2">
-                                            <li><a href="about.html">About One</a></li>
-                                            <li><a href="about-2.html">About Two</a></li>
-                                            <li><a href="about-3.html">About Three</a></li>
-                                            <li><a href="about-4.html">About Four</a></li>
-                                            <li><a href="about-5.html">About Five</a></li>
-                                            <li><a href="about-6.html">About Six</a></li>
-                                            <li><a href="about-7.html">About Seven</a></li>
-                                            <li><a href="about-8.html">About Eight</a></li>
-                                        </ul>
-                                    </li> -->
-                                    <!-- <li class="tl-dropdown-2">
-                                        <a href="#">Staff <i class="fa-regular fa-angle-right"></i></a>
-
-                                        <ul class="tl-submenu tl-submenu-2">
-                                            <li><a href="staff.html">Staff One</a></li>
-                                            <li><a href="staff-2.html">Staff Two</a></li>
-                                            <li><a href="staff-3.html">Staff Three</a></li>
-                                            <li><a href="staff-4.html">Staff Four</a></li>
-                                            <li><a href="staff-5.html">Staff Five</a></li>
-                                            <li><a href="staff-6.html">Staff Six</a></li>
-                                        </ul>
-                                    </li> -->
-                                    <!-- <li><a href="staff-profile.html">Staff Profile</a></li>
-                                    <li class="tl-dropdown-2">
-                                        <a href="#">Event <i class="fa-regular fa-angle-right"></i></a>
-
-                                        <ul class="tl-submenu tl-submenu-2">
-                                            <li><a href="event.html">Event One</a></li>
-                                            <li><a href="event-2.html">Event Two</a></li>
-                                            <li><a href="event-3.html">Event Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="event-details.html">Event Details</a></li> -->
-                                <!-- </ul> -->
                             </li>
 
                             <li class="tl-nav-item tl-dropdown">
                                 <a href="News.html" role="button">
-                                    NEWS <i class="fa-regular fa-angle-down"></i>
-                                </a>
-                                <!-- <ul class="tl-submenu">
-                                    <li class="tl-dropdown-2">
-                                        <a href="#">Blog <i class="fa-regular fa-angle-right"></i></a>
+                                    NEWS<i class="fa-regular fa-angle-down"></i>
 
-                                        <ul class="tl-submenu tl-submenu-2">
-                                            <li><a href="blog.html">Blog One</a></li>
-                                            <li><a href="blog-2.html">Blog Two</a></li>
-                                            <li><a href="blog-3.html">Blog Three</a></li>
-                                            <li><a href="blog-4.html">Blog Four</a></li>
-                                            <li><a href="blog-5.html">Blog Five</a></li>
-                                            <li><a href="blog-6.html">Blog Six</a></li>
-                                            <li><a href="blog-7.html">Blog Seven</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                </ul> -->
                             </li>
 
                             <li class="tl-nav-item tl-dropdown">
-                                <a href="contact.html">CONTACT <i class="fa-regular fa-angle-down"></i></a>
+                                <a href="Eschool.html">E-SCHOOL <i class="fa-regular fa-angle-down"></i></a>
 
-                                <!-- <ul class="tl-submenu">
-                                    <li><a href="contact.html">Contact One</a></li>
-                                    <li><a href="contact-2.html">Contact Two</a></li>
-                                </ul> -->
+
+                            <li class="tl-nav-item tl-dropdown">
+                                <a href="about-2.html" role="button">
+                                    ABOUT US <i class="fa-regular fa-angle-down"></i>
+
                             </li>
+                            <li class="tl-nav-item tl-dropdown">
+                                <a href="contact.html" role="button">
+                                    CONTACT US <i class="fa-regular fa-angle-down"></i>
+
+                            </li>
+
+
                         </ul>
                     </div>
                 </div>
 
-                <div class="col-2 d-lg-block d-none position-relative">
+                <!-- <div class="col-2 d-lg-block d-none position-relative">
                     <div class="kb-header-actions-11 d-flex justify-content-end">
-                        <button class="tl-searh-btn kb-searh-open-btn-11"><i class="fa-regular fa-magnifying-glass"></i></button>
-                        <a href="signup.html" class="tl-def-btn tl-2-def-btn"><i class="fa-regular fa-user"></i> Login/Register</a>
+                        <button class="tl-searh-btn kb-searh-open-btn-11"><i
+                                class="fa-regular fa-magnifying-glass"></i></button>
+                        <a href="signup.html" class="tl-def-btn tl-2-def-btn"><i class="fa-regular fa-user"></i>
+                            Login/Register</a>
                     </div>
 
                     <form class="tl-7-search-form-modal">
                         <input type="search" name="Search" class="tl-7-nav-search" placeholder="Search items">
-                        <button type="submit" class="tl-7-search-btn"><i class="fa-regular fa-magnifying-glass"></i></button>
+                        <button type="submit" class="tl-7-search-btn"><i
+                                class="fa-regular fa-magnifying-glass"></i></button>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -288,7 +220,9 @@
                     <div class="tl-2-about-txt">
                         <h2 class="tl-2-section-title">Request a Tutors For a Free Online Class.</h2>
                         <h6 class="tl-2-about-second-title">Play As You Learn</h6>
-                        <p class="tl-2-about-descr">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected randomised words which don't look even slightly believable.</p>
+                        <p class="tl-2-about-descr">There are many variations of passages of Lorem Ipsum available, but
+                            the majority have suffered alteration in some form, by injected randomised words which don't
+                            look even slightly believable.</p>
                         <div class="tl-2-about-stats">
                             <div class="tl-2-about-stat">
                                 <span class="tl-9-about-stat-num">06+</span>
@@ -305,7 +239,8 @@
                                 <span class="tl-9-about-stat-name">Award Won</span>
                             </div>
                         </div>
-                        <a href="#" class="tl-2-blog-btn"><span class="tl-2-blog-btn-icon"><i class="fa-regular fa-arrow-up-right"></i></span>More About Us</a>
+                        <a href="#" class="tl-2-blog-btn"><span class="tl-2-blog-btn-icon"><i
+                                    class="fa-regular fa-arrow-up-right"></i></span>More About Us</a>
                     </div>
                 </div>
             </div>
@@ -324,7 +259,8 @@
             <div class="tl-testimonial-slider owl-carousel">
                 <div class="tl-single-testimony tl-2-testimony">
                     <p class="tl-2-testimony-txt">
-                        It was my immense luck and fortune to be a part of Educlab University where I can grow. The entire faculty & department leaves no stone unturned to shape one's future in my four years.
+                        It was my immense luck and fortune to be a part of Educlab University where I can grow. The
+                        entire faculty & department leaves no stone unturned to shape one's future in my four years.
                     </p>
 
                     <div class="tl-2-testimony-reviewer">
@@ -338,7 +274,8 @@
 
                 <div class="tl-single-testimony tl-2-testimony">
                     <p class="tl-2-testimony-txt">
-                        It was my immense luck and fortune to be a part of Educlab University where I can grow. The entire faculty & department leaves no stone unturned to shape one's future in my four years.
+                        It was my immense luck and fortune to be a part of Educlab University where I can grow. The
+                        entire faculty & department leaves no stone unturned to shape one's future in my four years.
                     </p>
 
                     <div class="tl-2-testimony-reviewer">
@@ -352,7 +289,8 @@
 
                 <div class="tl-single-testimony tl-2-testimony">
                     <p class="tl-2-testimony-txt">
-                        It was my immense luck and fortune to be a part of Educlab University where I can grow. The entire faculty & department leaves no stone unturned to shape one's future in my four years.
+                        It was my immense luck and fortune to be a part of Educlab University where I can grow. The
+                        entire faculty & department leaves no stone unturned to shape one's future in my four years.
                     </p>
 
                     <div class="tl-2-testimony-reviewer">
@@ -375,7 +313,8 @@
     <section class="tl-2-cta bg-defaults pt-120 pb-130" data-background="assets/images/tl-2/cta-bg.jpg">
         <div class="container">
             <h2 class="tl-2-section-title">Join Our New Session</h2>
-            <p class="tl-2-cta-descr">There are many variations passages Lorem Ipsum available, but majority have suffered alteration in some form, by injected randomized.</p>
+            <p class="tl-2-cta-descr">There are many variations passages Lorem Ipsum available, but majority have
+                suffered alteration in some form, by injected randomized.</p>
             <a href="#" class="tl-2-cta-btn">Apply Now</a>
         </div>
     </section>
@@ -440,7 +379,8 @@
                             <h5 class="tl-2-footer-widget-title">Get in touch</h5>
 
                             <ul class="tl-2-footer-links tl-footer-contact-infos">
-                                <li><a href="tel:2348163634644" class="tl-footer-number">+2348163634644,+2348078379149</a></li>
+                                <li><a href="tel:2348163634644"
+                                        class="tl-footer-number">+2348163634644,+2348078379149</a></li>
                                 <li>
                                     <p class="tl-2-footer-address-txt">16,Oyekunle Street,
                                         Ajao Estate,Anthony Village,Lagos,NIGERIA</p>
@@ -474,4 +414,5 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/about-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:13 GMT -->
+
 </html>
