--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:14 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,8 +56,10 @@
             <div class="kidba-menu-sidebar-top mb-40">
                 <nav>
                     <div class="nav nav-tabs border-0" id="nav-tab" role="tablist">
-                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu" type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
-                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button" role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
+                        <button class="active " id="nav-menu-tab" data-bs-toggle="tab" data-bs-target="#nav-menu"
+                            type="button" role="tab" aria-controls="nav-menu" aria-selected="true">Menu</button>
+                        <button id="nav-info-tab" data-bs-toggle="tab" data-bs-target="#nav-info" type="button"
+                            role="tab" aria-controls="nav-info" aria-selected="false">Info</button>
                     </div>
                 </nav>
             </div>
@@ -74,7 +77,8 @@
                         <div class="kidba-sidebar-info-content-331">
                             <ul>
                                 <li><i class="icofont-clock-time"></i> 9:30am - 6:30pm, Mon - Sun</li>
-                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567 6587</a></li>
+                                <li><a href="tel:http://80012345676587"><i class="icofont-phone"></i> +800-123-4567
+                                        6587</a></li>
                                 <li><i class="icofont-google-map"></i> Anmoore Road Brooklyn, NY 230</li>
                             </ul>
                         </div>
@@ -118,132 +122,58 @@
                         <div class="tl-nav-menu tl-nav-menu-7">
                             <ul class="justify-content-center">
                                 <li class="tl-nav-item tl-7-nav-item tl-dropdown">
-                                    <a href="index.html" role="button">
+                                    <a href="#" role="button">
                                         HOME <i class="fa-regular fa-angle-down"></i>
                                     </a>
-                                    <!-- <ul class="tl-submenu">
-                                        <li><a href="index.html">Online Education (LMS)</a></li>
-                                        <li><a href="index-2.html">Kindergarten</a></li>
-                                        <li><a href="index-3.html">School</a></li>
-                                        <li><a href="index-4.html">College</a></li>
-                                        <li><a href="index-5.html">University</a></li>
-                                        <li><a href="index-6.html">Magazine</a></li>
-                                        <li><a href="index-7.html">Dance School</a></li>
-                                        <li><a href="index-8.html">Driving School</a></li>
-                                        <li><a href="index-9.html">Music School</a></li>
-                                        <li><a href="index-10.html">University Two</a></li>
-                                        <li><a href="index-11.html">Magazine Two</a></li>
-                                        <li><a href="index-12.html">Live Class</a></li>
-                                        <li><a href="index-13.html">Online Course</a></li>
-                                        <li><a href="index-14.html">Language Club</a></li>
-                                    </ul> -->
+
                                 </li>
 
-                                <li class="tl-nav-item tl-7-nav-item tl-dropdown">
-                                    <a href="class.html" role="button">
-                                        CLASSES <i class="fa-regular fa-angle-down"></i>
+                                <li class="tl-nav-item tl-dropdown">
+                                    <a href="Admission.html" role="button">
+                                        ADMISSION <i class="fa-regular fa-angle-down"></i>
                                     </a>
-                                    <!-- <ul class="tl-submenu">
-                                        <li><a href="course.html">Course One</a></li>
-                                        <li><a href="course-2.html">Course Two</a></li>
-                                        <li><a href="course-3.html">Course Three</a></li>
-                                        <li><a href="course-4.html">Course Four</a></li>
 
-                                        <li><a href="course-details.html">Course Details</a></li>
-                                    </ul> -->
                                 </li>
 
-                                <li class="tl-nav-item tl-7-nav-item tl-dropdown">
+                                <li class="tl-nav-item tl-dropdown">
+                                    <a href="News.html" role="button">
+                                        NEWS<i class="fa-regular fa-angle-down"></i>
+
+                                </li>
+
+                                <li class="tl-nav-item tl-dropdown">
+                                    <a href="Eschool.html">E-SCHOOL <i class="fa-regular fa-angle-down"></i></a>
+
+
+                                <li class="tl-nav-item tl-dropdown">
                                     <a href="about-2.html" role="button">
                                         ABOUT US <i class="fa-regular fa-angle-down"></i>
-                                    </a>
-                                    <!-- <ul class="tl-submenu">
-                                        <li class="tl-dropdown-2">
-                                            <a href="#">About <i class="fa-regular fa-angle-right"></i></a>
 
-                                            <ul class="tl-submenu tl-submenu-2">
-                                                <li><a href="about.html">About One</a></li>
-                                                <li><a href="about-2.html">About Two</a></li>
-                                                <li><a href="about-3.html">About Three</a></li>
-                                                <li><a href="about-4.html">About Four</a></li>
-                                                <li><a href="about-5.html">About Five</a></li>
-                                                <li><a href="about-6.html">About Six</a></li>
-                                                <li><a href="about-7.html">About Seven</a></li>
-                                                <li><a href="about-8.html">About Eight</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="tl-dropdown-2">
-                                            <a href="#">Staff <i class="fa-regular fa-angle-right"></i></a>
+                                </li>
+                                <li class="tl-nav-item tl-dropdown">
+                                    <a href="contact.html" role="button">
+                                        CONTACT US <i class="fa-regular fa-angle-down"></i>
 
-                                            <ul class="tl-submenu tl-submenu-2">
-                                                <li><a href="staff.html">Staff One</a></li>
-                                                <li><a href="staff-2.html">Staff Two</a></li>
-                                                <li><a href="staff-3.html">Staff Three</a></li>
-                                                <li><a href="staff-4.html">Staff Four</a></li>
-                                                <li><a href="staff-5.html">Staff Five</a></li>
-                                                <li><a href="staff-6.html">Staff Six</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="staff-profile.html">Staff Profile</a></li>
-                                        <li class="tl-dropdown-2">
-                                            <a href="#">Event <i class="fa-regular fa-angle-right"></i></a>
-
-                                            <ul class="tl-submenu tl-submenu-2">
-                                                <li><a href="event.html">Event One</a></li>
-                                                <li><a href="event-2.html">Event Two</a></li>
-                                                <li><a href="event-3.html">Event Three</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="event-details.html">Event Details</a></li>
-                                    </ul> -->
                                 </li>
 
-                                <li class="tl-nav-item tl-7-nav-item tl-dropdown">
-                                    <a href="News.html" role="button">
-                                        NEWS <i class="fa-regular fa-angle-down"></i>
-                                    </a>
-                                    <!-- <ul class="tl-submenu">
-                                        <li class="tl-dropdown-2">
-                                            <a href="#">Blog <i class="fa-regular fa-angle-right"></i></a>
-
-                                            <ul class="tl-submenu tl-submenu-2">
-                                                <li><a href="blog.html">Blog One</a></li>
-                                                <li><a href="blog-2.html">Blog Two</a></li>
-                                                <li><a href="blog-3.html">Blog Three</a></li>
-                                                <li><a href="blog-4.html">Blog Four</a></li>
-                                                <li><a href="blog-5.html">Blog Five</a></li>
-                                                <li><a href="blog-6.html">Blog Six</a></li>
-                                                <li><a href="blog-7.html">Blog Seven</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul> -->
-                                </li>
-
-                                <li class="tl-nav-item tl-7-nav-item tl-dropdown">
-                                    <a href="contact.html">CONTACT <i class="fa-regular fa-angle-down"></i></a>
-
-                                    <!-- <ul class="tl-submenu">
-                                        <li><a href="contact.html">Contact One</a></li>
-                                        <li><a href="contact-2.html">Contact Two</a></li>
-                                    </ul> -->
-                                </li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-2 d-lg-block d-none position-relative">
+                <!-- <div class="col-2 d-lg-block d-none position-relative">
                     <div class="kb-header-actions-11 d-flex justify-content-end">
-                        <button class="tl-searh-btn kb-searh-open-btn-11"><i class="fa-light fa-magnifying-glass"></i></button>
+                        <button class="tl-searh-btn kb-searh-open-btn-11"><i
+                                class="fa-light fa-magnifying-glass"></i></button>
                         <a href="signup.html" class="tl-7-def-btn">Let's Dance</a>
                     </div>
 
                     <form class="tl-7-search-form-modal">
                         <input type="search" name="Search" class="tl-7-nav-search" placeholder="Search items">
-                        <button type="submit" class="tl-7-search-btn"><i class="fa-regular fa-magnifying-glass"></i></button>
+                        <button type="submit" class="tl-7-search-btn"><i
+                                class="fa-regular fa-magnifying-glass"></i></button>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -300,7 +230,8 @@
                             </div>
 
                             <div class="col-12">
-                                <textarea name="stud-message" id="tl-7-stud-message" placeholder="Your Message"></textarea>
+                                <textarea name="stud-message" id="tl-7-stud-message"
+                                    placeholder="Your Message"></textarea>
                             </div>
 
                             <div class="col">
@@ -311,7 +242,9 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2169.5878941785077!2d90.39650346418186!3d23.861328234002062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9884c556831%3A0xbf922ce212df4e67!2sSpeedDigit%20Software%20Solution!5e0!3m2!1sen!2sbd!4v1687239684068!5m2!1sen!2sbd" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2169.5878941785077!2d90.39650346418186!3d23.861328234002062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9884c556831%3A0xbf922ce212df4e67!2sSpeedDigit%20Software%20Solution!5e0!3m2!1sen!2sbd!4v1687239684068!5m2!1sen!2sbd"
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -331,11 +264,12 @@
                             </a>
 
                             <ul class="tl-footer-links tl-3-footer-contact-infos">
-                                <li><a href="tel:2348163634644" class="tl-footer-number">+2348163634644,+2348078379149</a></li>
+                                <li><a href="tel:2348163634644"
+                                        class="tl-footer-number">+2348163634644,+2348078379149</a></li>
 
                                 <li>
                                     <p class="tl-3-footer-address">16,Oyekunle Street,
-                                        Ajao Estate,Anthony Village,Lagos,NIGERIA  </p>
+                                        Ajao Estate,Anthony Village,Lagos,NIGERIA </p>
                                 </li>
                             </ul>
                         </div>
@@ -375,7 +309,9 @@
                             <h5 class="tl-footer-widget-title">Newsletter</h5>
                             <p class="tl-3-nwsltr-txt">Register now to get latest updates on promotions & coupons.</p>
                             <form action="#" class="tl-3-nwsltr-form">
-                                <input type="email" name="nwsltr-mail" id="tl-3-nwsltr-mail" class="tl-3-nwsltr-mail-input tl-8-nwsltr-mail-input" placeholder="Enter Your Email">
+                                <input type="email" name="nwsltr-mail" id="tl-3-nwsltr-mail"
+                                    class="tl-3-nwsltr-mail-input tl-8-nwsltr-mail-input"
+                                    placeholder="Enter Your Email">
                                 <button class="tl-3-def-btn" id="tl-3-nwsltr-btn">Get Newsletter</button>
                             </form>
                         </div>
@@ -388,7 +324,8 @@
             <div class="container">
                 <div class="row gy-4 align-items-center">
                     <div class="col-md-6">
-                        <p class="tl-3-copyright-txt m-0 text-center text-md-start">Copyright &copy; 2024 All Rights Reserved by First Quiver</p>
+                        <p class="tl-3-copyright-txt m-0 text-center text-md-start">Copyright &copy; 2024 All Rights
+                            Reserved by First Quiver</p>
                     </div>
 
                     <div class="col-md-6">
@@ -420,4 +357,5 @@
 
 
 <!-- Mirrored from codebasket.xyz/template/talim/light/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Sep 2024 13:34:14 GMT -->
+
 </html>
